--- a/trunk/hospitalDB_CS/web.config
+++ b/trunk/hospitalDB_CS/web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0"?>
+<?xml version="1.0"?>
 <!-- 
     Note: As an alternative to hand editing this file you can use the 
     web admin tool to configure settings for your application. Use
@@ -22,7 +22,10 @@
 		</sectionGroup>
 	</configSections>
 	<appSettings/>
-	<connectionStrings/>
+	<connectionStrings>
+  <add name="hospital_G004ConnectionString" connectionString="Server=localhost;User ID=root;Password=sasha;Persist Security Info=True;Database=hospital_G004"
+   providerName="MySql.Data.MySqlClient" />
+ </connectionStrings>
 	<system.web>
 		<!-- 
             Set compilation debug="true" to insert debugging 
